--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   	<h1>Yu Su</h1>
   	<div id="header">
     	<a href="#">Home</a>
-        <a href="resources/cv.pdf">CV</a>
+        <a href="resources/CV_YuSu.pdf">CV</a>
         <!-- <a href="#experience">Experience</a> -->
         <a href="#teaching">Teaching</a>
         <a href="#student">Students</a>
@@ -65,6 +65,7 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <li><b>Check out <a href="https://twitter.com/osunlp/status/1609642737409855490">a summary of the major achievements</a> by the OSU NLP group in 2022!</b></li>
+            <li>07/2023: Honored that our paper <a href="https://arxiv.org/abs/2212.09736">Pangu</a> received the Outstanding Paper Award from ACL 2023!</li>
             <li>06/2023: Invited talks at Army Research Lab and OSU RISK Institute.</li>
             <li>05/2023: 6 papers accepted to ACL'23. Congrats to all the students and collaborators!</li>
             <li>05/2023: Grateful to receive support from NIH R01 for our research on AI and biomedicine!</li>
