--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <li><b>Check out <a href="https://twitter.com/osunlp/status/1609642737409855490">a summary of the major achievements</a> by the OSU NLP group in 2022!</b></li>
+            <li>07/2023: Glad that paper on using LLMs for embodied agent planning accepted to ICCV'23!</li>
             <li>07/2023: Honored that our paper <a href="https://arxiv.org/abs/2212.09736">Pangu</a> received the Outstanding Paper Award from ACL 2023!</li>
             <li>06/2023: Invited talks at Army Research Lab and OSU RISK Institute.</li>
             <li>05/2023: 6 papers accepted to ACL'23. Congrats to all the students and collaborators!</li>
@@ -259,15 +260,15 @@
                 <span class="paperAuthor">Shijie Chen, Ziru Chen, Huan Sun, Yu Su.</span>
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.13683">paper</a>]</span>
                 </li>
-              <li>
-              <span class="paperTitle">LLM-Planner: Few-Shot Grounded Planning for Embodied Agents with Large Language Models</span> <br />
-              <span class="paperAuthor">Chan Hee Song, Jiaman Wu, Clayton Washington, Brian M. Sadler, Wei-Lun Chao, Yu Su.</span>
-              <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.04088">paper</a>] [<a href="https://dki-lab.github.io/LLM-Planner/">project website</a>] [<a href="https://embodied-ai.org/papers/2023/7.pdf">Embodied AI workshop at CVPR'23</a>]</span>
-              </li>
 	        </ul>
 
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
+                <li>
+                <span class="paperTitle">LLM-Planner: Few-Shot Grounded Planning for Embodied Agents with Large Language Models</span> <br />
+                <span class="paperAuthor">Chan Hee Song, Jiaman Wu, Clayton Washington, Brian M. Sadler, Wei-Lun Chao, Yu Su. In the International Conference on Computer Vision, 2023 (<b>ICCV'23</b>) </span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.04088">paper</a>] [<a href="https://dki-lab.github.io/LLM-Planner/">project website</a>] [<a href="https://embodied-ai.org/papers/2023/7.pdf">Embodied AI workshop at CVPR'23</a>]</span>
+                </li>
                 <li>
                 <span class="paperTitle">SalsaBot: Towards a Robust and Generalizable Embodied Agent</span> <br />
                 <span class="paperAuthor">Chan Hee Song*, Jiaman Wu*, Ju-Seung Byun, Zexin Xu, Vardaan Pahuja, Goonmeet Bajaj, Samuel Stevens, Ziru Chen, Yu Su. Short version in the Embodied AI Workshop at CVPR 2023, long version in the Proceedings of Alexa Prize SimBot Challenge.</span>
