--- a/index.html
+++ b/index.html
@@ -611,6 +611,7 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
         <h2>Awards & Honors</h2>
         <div class="divider"></div>
         <ul>
+            <li>Outstanding Paper Award, ACL, 2023</li> 
             <li>Lumley Research Award, OSU, 2023</li>  
             <li>Outstanding Paper Award, COLING, 2022</li>  
             <li>Distinguished Assistant Professorship of Engineering Inclusive Excellence, OSU, 2022</li>
