--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
 	          <li>Best Distinguished Graduate Student Lecture of CS Summit, UCSB, 2018</li>
             <!-- <li>NSF-funded SDM Travel Award, 2016</li> -->
             <!-- <li>LINK Lab Fellowship, UCSB, 2012</li> -->
-            <li>Outstanding Freshman/Graduate, Tsinghua University, 2008/2012</li>
+            <li>Outstanding Freshman/Graduate Awards, Tsinghua University, 2008/2012</li>
 	        <!-- <li>Merit-based Scholarships, Tsinghua University, 2008-2011</li> -->
         </ul>
     </div>
