--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     	<a href="#">Home</a>
         <a href="resources/CV_YuSu.pdf">CV</a>
         <!-- <a href="#experience">Experience</a> -->
-        <a href="#teaching">Teaching</a>
         <a href="#student">Students</a>
         <a href="#publications">Publications</a>
         <a href="#awards">Awards</a>
+        <a href="#teaching">Teaching</a>
         <a href="#sponsors">Sponsors</a>
         <!-- <a href="#service">Service</a> -->
 	      <a href="#contact">Contact</a>
@@ -40,10 +40,10 @@
         <div class="divider"></div>
 
         <img src="images/avatar.jpg" alt="Yu Su" style="width:264px;height:246px;float:left;margin-right:10px;margin-bottom:10px;margin-top:5px;">
-        <p>I'm a Distinguished Assistant Professor of Engineering Inclusive Excellence at the <a href="https://cse.osu.edu/">Department of Computer Science and Engineering</a>, The Ohio State University, where I serve as the Co-Lead of Foundational AI in the <a href="https://icicle.osu.edu/">ICICLE AI Institute</a> and Lead of Machine Learning Foundations in the <a href="https://imageomics.osu.edu/">Imageomics Institute</a>. I also spend some fun time at <a href="https://www.microsoft.com/en-us/research/project/semantic-machines/">Microsoft Semantic Machines</a>, where I help develop a suite of new technologies for task-oriented dialogue systems that have been deployed in <a href="https://techcommunity.microsoft.com/t5/outlook-blog/start-a-conversation-with-your-personal-productivity-assistant/ba-p/2071416">Microsoft Outlook</a>. I got my PhD from <a href="https://cs.ucsb.edu/">University of California, Santa Barbara</a> and my bachelor degree from <a href="https://www.cs.tsinghua.edu.cn/csen/">Tsinghua University</a>. 
+        <p>I'm a Distinguished Assistant Professor of Engineering Inclusive Excellence at the <a href="https://cse.osu.edu/">Department of Computer Science and Engineering</a>, The Ohio State University, where I co-direct the <a href="https://icicle.osu.edu/">OSU NLP group</a>, co-lead the Foundational AI team in the <a href="https://icicle.osu.edu/">ICICLE AI Institute</a> and lead the Machine Learning Foundations team in the <a href="https://imageomics.osu.edu/">Imageomics Institute</a>. I also spend some fun time at <a href="https://www.microsoft.com/en-us/research/project/semantic-machines/">Microsoft Semantic Machines</a>. I got my PhD from <a href="https://cs.ucsb.edu/">University of California, Santa Barbara</a> and my bachelor's degree from <a href="https://www.cs.tsinghua.edu.cn/csen/">Tsinghua University</a>, both in Computer Science. 
         </p>
         <p>
-        I have broad interests in understanding human languages, formal knowledge and languages, and their interplay, with the overarching goal of enabling humans and machines to communicate and collaborate via natural language. More specifically, I'm interested in conversational AI (dialogue systems, semantic parsing, question answering, and grounded language understanding) and knowledge representation (knowledge base construction, reasoning, and querying). I'm also fascinated by a series of general AI problems such as interpretability, robustness and out-of-distribution generalization, multimodality, and sample-efficient learning. Finally, I believe in translational research and seek to leverage AI capabilities to empower a variety of domains such as biomedicine and biology.  
+        I have broad interests in developing artificial intelligence, with a primary interest in the role of language in both artificial and human intelligence. These days, I'm particularly fond of <i>foundation models</i>, including both large language models (LLMs) and multimodal ones, and I believe they are an important step towards more general AI and should be studied thoroughly. I enjoy developing <i>language agents</i> that, in a robust and trustworthy way, automate a lot of our tedious tasks and make the computing world more accessible to all. I like to <i>make things that work</i>, which often means operating at scale and in real-world settings. Finally, I believe in translational research and seek to leverage AI capabilities to empower a variety of domains such as <i>biology and biomedicine</i>, and meanwhile seek inspirations from these disciplines to develop better AI.  
         </p>
 	
 	<div>
@@ -51,7 +51,7 @@
 
   <p>I'm always looking for highly motivated students. Drop me an email with CV and transcripts if you are interested in natural language processing, machine learning, or AI in general (unfortunately due to the high volumn I may not be able to reply to every email)</p>
 
-  <!-- <p><b>I'm hiring a postdoc (ML/Vision/NLP background) with potential topics including multimodal foundation model pre-training, interpretability, and neuro-symbolic learning. Apply through <a href="https://tinyurl.com/463upmx2">job post</a> and send me an <a href="mailto: su.809@osu.edu">email</a> with CV!</b></p> -->
+  <p><b>I'm hiring a postdoc (ML/Vision/NLP background) with potential topics including (multimodal) foundation models for sciences, LLMs, language agents and tool use. Send me an <a href="mailto: su.809@osu.edu">email</a> with CV and interests!</b></p>
 	</div>
     </div>
 	    
@@ -164,19 +164,6 @@
             <li>06/2015 - 09/2015: Research intern at <i>IBM T.J. Watson Research Center</i></li>
         </ul>
     </div> -->
-
-    <div class="contentBlock">
-        <a name="teaching"></a>
-        <h2>Teaching</h2>
-        <div class="divider"></div>
-        <ul>
-            <li>AU2022: CSE6521 - Introduction to Artificial Intelligence</a> (Graduate) </li>
-            <li>SP2022: CSE5525 - Foundations of Speech and Language Processing</a> (Undergrad & Graduate) </li>
-            <li>AU2021: CSE6521 - Introduction to Artificial Intelligence</a> (Graduate) </li>
-            <li>AU2020: <a href="courses/au20/cse5539/">CSE5539 - Cutting-Edge Topics in Natural Language Processing</a> (Undergrad & Graduate)</li>
-            <li>SP2020: <a href="courses/sp20/cse5243/">CSE5243 - Introduction to Data Mining</a> (Undergrad & Graduate)</li>
-        </ul>
-    </div>
 
     <div class="contentBlock">
       <a name="student"></a>
@@ -626,6 +613,19 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
 	        <!-- <li>Merit-based Scholarships, Tsinghua University, 2008-2011</li> -->
         </ul>
     </div>
+
+    <div class="contentBlock">
+      <a name="teaching"></a>
+      <h2>Teaching</h2>
+      <div class="divider"></div>
+      <ul>
+          <li>AU2022: CSE6521 - Introduction to Artificial Intelligence</a> (Graduate) </li>
+          <li>SP2022: CSE5525 - Foundations of Speech and Language Processing</a> (Undergrad & Graduate) </li>
+          <li>AU2021: CSE6521 - Introduction to Artificial Intelligence</a> (Graduate) </li>
+          <li>AU2020: <a href="courses/au20/cse5539/">CSE5539 - Cutting-Edge Topics in Natural Language Processing</a> (Undergrad & Graduate)</li>
+          <li>SP2020: <a href="courses/sp20/cse5243/">CSE5243 - Introduction to Data Mining</a> (Undergrad & Graduate)</li>
+      </ul>
+  </div>
     
 
     <div class="contentBlock">
