--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <div id="main">
-  	<h1>Yu Su</h1>
+  	<h1>Yu Su (<span style="font-family:Georgia,Times New Roman,KaiTi,STKaiti,serif;font-size:32pt">苏煜</span>)</h1>
   	<div id="header">
     	<a href="#">Home</a>
         <a href="resources/CV_YuSu.pdf">CV</a>
