--- a/index (MININT-EV4201J.redmond.corp.microsoft.com's conflicted copy 2023-07-30).html
+++ b/index (MININT-EV4201J.redmond.corp.microsoft.com's conflicted copy 2023-07-30).html
@@ -18,7 +18,7 @@
 
 <body>
   <div id="main">
-  	<h1>Yu Su (<span style="font-family:Georgia,Times New Roman,KaiTi,STKaiti,serif;font-size:32pt">苏煜</span>)</h1>
+  	<h1>Yu Su</h1>
   	<div id="header">
     	<a href="#">Home</a>
         <a href="resources/CV_YuSu.pdf">CV</a>
@@ -39,11 +39,11 @@
         <h2>About Me</h2>
         <div class="divider"></div>
 
-        <img src="images/avatar.jpg" alt="Yu Su" style="width:172px;height:160px;float:left;margin-right:20px;margin-bottom:10px;margin-top:5px;">
-        <p>I'm a Distinguished Assistant Professor of Engineering Inclusive Excellence at the <a href="https://cse.osu.edu/">Department of Computer Science and Engineering</a>, The Ohio State University, where I co-direct the <a href="https://twitter.com/osunlp">OSU NLP group</a>, co-lead the Foundational AI team in the <a href="https://icicle.osu.edu/">ICICLE AI Institute</a> and lead the Machine Learning Foundations team in the <a href="https://imageomics.osu.edu/">Imageomics Institute</a>. I also spend some fun time at <a href="https://www.microsoft.com/en-us/research/project/semantic-machines/">Microsoft Semantic Machines</a>. I got my PhD from <a href="https://cs.ucsb.edu/">University of California, Santa Barbara</a> and my bachelor's degree from <a href="https://www.cs.tsinghua.edu.cn/csen/">Tsinghua University</a>, both in Computer Science. 
+        <img src="images/avatar.jpg" alt="Yu Su" style="width:264px;height:246px;float:left;margin-right:10px;margin-bottom:10px;margin-top:5px;">
+        <p>I'm a Distinguished Assistant Professor of Engineering Inclusive Excellence at the <a href="https://cse.osu.edu/">Department of Computer Science and Engineering</a>, The Ohio State University, where I co-direct the <a href="https://icicle.osu.edu/">OSU NLP group</a>, co-lead the Foundational AI team in the <a href="https://icicle.osu.edu/">ICICLE AI Institute</a> and lead the Machine Learning Foundations team in the <a href="https://imageomics.osu.edu/">Imageomics Institute</a>. I also spend some fun time at <a href="https://www.microsoft.com/en-us/research/project/semantic-machines/">Microsoft Semantic Machines</a>. I got my PhD from <a href="https://cs.ucsb.edu/">University of California, Santa Barbara</a> and my bachelor's degree from <a href="https://www.cs.tsinghua.edu.cn/csen/">Tsinghua University</a>, both in Computer Science. 
         </p>
         <p>
-        I have broad interests in developing artificial intelligence, with a primary interest in the role of language, as a vehicle of thought and communication, in both artificial and human intelligence. These days, I'm particularly fond of <i>foundation models</i>, including both large language models (LLMs) and multimodal ones, and I believe they are an important step towards more general AI and should be studied thoroughly. I enjoy developing <i>language agents</i> that, in a robust and trustworthy way, automate a lot of our tedious tasks and make the computing world more accessible to all. I like to <i>make things that work</i>, which often means operating at scale and in real-world settings. For that I also deeply care about <i>generalizability</i>, <i>interpretability</i>, <i>efficiency</i>, and <i>robustness</i>. Finally, I believe in translational research and seek to leverage AI capabilities to empower a variety of domains such as <i>biology and biomedicine</i>, and meanwhile seek inspirations from these disciplines to develop better AI.  
+        I have broad interests in developing artificial intelligence, with a primary interest in the role of language in both artificial and human intelligence. These days, I'm particularly fond of <i>foundation models</i>, including both large language models (LLMs) and multimodal ones, and I believe they are an important step towards more general AI and should be studied thoroughly. I enjoy developing <i>language agents</i> that, in a robust and trustworthy way, automate a lot of our tedious tasks and make the computing world more accessible to all. I like to <i>make things that work</i>, which often means operating at scale and in real-world settings. Finally, I believe in translational research and seek to leverage AI capabilities to empower a variety of domains such as <i>biology and biomedicine</i>, and meanwhile seek inspirations from these disciplines to develop better AI.  
         </p>
 	
 	<div>
