--- a/index.html
+++ b/index.html
@@ -238,11 +238,6 @@
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.06311">paper</a>] [<a href="https://github.com/OSU-NLP-Group/AttrScore">code</a>] [<a href="https://huggingface.co/datasets/osunlp/AttrScore">data</a>]</span>
               </li>
               <li>
-              <span class="paperTitle">A Retrieve-and-Read Framework for Knowledge Graph Link Prediction</span> <br />
-              <span class="paperAuthor">Vardaan Pahuja, Boshi Wang, Hugo Latapie, Jayanth Srinivasa, Yu Su.</span>
-              <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.09724">paper</a>]</span>
-              </li>
-              <li>
                 <span class="paperTitle">Error Detection for Text-to-SQL Semantic Parsing</span> <br />
                 <span class="paperAuthor">Shijie Chen, Ziru Chen, Huan Sun, Yu Su.</span>
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.13683">paper</a>]</span>
@@ -256,6 +251,11 @@
                 <span class="paperAuthor">Chan Hee Song, Jiaman Wu, Clayton Washington, Brian M. Sadler, Wei-Lun Chao, Yu Su. In the International Conference on Computer Vision, 2023 (<b>ICCV'23</b>) </span>
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.04088">paper</a>] [<a href="https://dki-lab.github.io/LLM-Planner/">project website</a>] [<a href="https://embodied-ai.org/papers/2023/7.pdf">Embodied AI workshop at CVPR'23</a>]</span>
                 </li>
+                <li>
+                  <span class="paperTitle">A Retrieve-and-Read Framework for Knowledge Graph Link Prediction</span> <br />
+                  <span class="paperAuthor">Vardaan Pahuja, Boshi Wang, Hugo Latapie, Jayanth Srinivasa, Yu Su. In the ACM International Conference on Information and Knowledge Management, 2023 (<b>CIKM'23</b>)</span>
+                  <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.09724">paper</a>]</span>
+                  </li>
                 <li>
                 <span class="paperTitle">SalsaBot: Towards a Robust and Generalizable Embodied Agent</span> <br />
                 <span class="paperAuthor">Chan Hee Song*, Jiaman Wu*, Ju-Seung Byun, Zexin Xu, Vardaan Pahuja, Goonmeet Bajaj, Samuel Stevens, Ziru Chen, Yu Su. Short version in the Embodied AI Workshop at CVPR 2023, long version in the Proceedings of Alexa Prize SimBot Challenge.</span>
