--- a/index.html
+++ b/index.html
@@ -210,6 +210,12 @@
           <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
           <ul>
             <li>
+              <span class="paperTitle">AgentBench: Evaluating LLMs as Agents
+              </span> <br />
+              <span class="paperAuthor">Xiao Liu, Hao Yu, Hanchen Zhang, Yifan Xu, Xuanyu Lei, Hanyu Lai, Yu Gu, Hangliang Ding, Kaiwen Men, Kejuan Yang, Shudan Zhang, Xiang Deng, Aohan Zeng, Zhengxiao Du, Chenhui Zhang, Sheng Shen, Tianjun Zhang, Yu Su, Huan Sun, Minlie Huang, Yuxiao Dong, Jie Tang.</span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2308.03688">paper</a>] [<a href="https://github.com/THUDM/AgentBench">code</a>] </span>
+            </li>
+            <li>
               <span class="paperTitle">MagicBrush: A Manually Annotated Dataset for Instruction-Guided Image Editing
               </span> <br />
               <span class="paperAuthor">Kai Zhang*, Lingbo Mo*, Wenhu Chen, Huan Sun, Yu Su.</span>
