--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <li><a href="https://drogozhang.github.io/">Kai Zhang</a> (AU22 &#8211)</li>
             <li>Jiaman (Lisa) Wu (AU22 &#8211, co-advised with Wei-Lun Chao)</li>
         </ul>
-        <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Master Students</b></p>
+        <!-- <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Master Students</b></p>
         <ul>
           <li>Jason Xu (AU22 &#8211)</li>
         </ul>
@@ -191,7 +191,7 @@
           <li>Clay Washington</li>
           <li><a href="https://nikolasmcneal.github.io/">Nikolas McNeal</a> &#x2192; Ph.D. at Georgia Tech</li>
           <li><a href="https://samuelstevens.me/">Sam Stevens</a>  &#x2192; Ph.D. at OSU</li>
-        </ul>
+        </ul> -->
         <!-- <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Interns/Visiting Scholars</b></p>
         <ul>
           <li><a href="https://esteng.github.io/">Elias Stengel-Eskin</a> (2021 summer intern at Microsoft)</li>
@@ -526,7 +526,7 @@
                 </li>
             </ul>
 		
-	    <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tutorials</b></p>
+	    <!-- <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tutorials</b></p>
             <ul>
 		<li>
                 <span class="paperTitle">Scalable Construction and Querying of Massive Knowledge Bases</span> <br />
@@ -538,7 +538,7 @@
                 <span class="paperAuthor">Xiang Ren, Yu Su, Xifeng Yan. In Proc. of the ACM International Conference on Information and Knowledge Management, 2017 (<b>CIKM’17</b>)</span>
                 <span class="paperResource"> [<a href="http://xren7.web.engr.illinois.edu/tutorial-cikm17.html">website</a>] </span>
 		</li>
-            </ul>
+            </ul> -->
 		
 	    <!-- <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Patents</b></p>
         <ul>
