--- a/index.html
+++ b/index.html
@@ -179,7 +179,9 @@
             <li><a href="https://samuelstevens.me/">Sam Stevens</a> (AU21 &#8211)</li>
             <li><a href="https://drogozhang.github.io/">Kai Zhang</a> (AU22 &#8211)</li>
             <li>Jiaman (Lisa) Wu (AU22 &#8211, co-advised with Wei-Lun Chao)</li>
-        </ul>
+            <li><a href="https://scholar.google.com/citations?user=amEL4n8AAAAJ">Boyuan Zheng</a> (AU23 &#8211)</li>
+            <li><a href="https://yihengshu.github.io/">Yiheng Shu</a> (AU23 &#8211)</li>
+          </ul>
         <!-- <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Master Students</b></p>
         <ul>
           <li>Jason Xu (AU22 &#8211)</li>
