--- a/index.html
+++ b/index.html
@@ -212,6 +212,12 @@
           <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
           <ul>
             <li>
+              <span class="paperTitle">MAmmoTH: Building Math Generalist Models through Hybrid Instruction Tuning
+              </span> <br />
+              <span class="paperAuthor">Xiang Yue, Xingwei Qu, Ge Zhang, Yao Fu, Wenhao Huang, Huan Sun, Yu Su, Wenhu Chen.</span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2309.05653">paper</a>] [<a href="https://tiger-ai-lab.github.io/MAmmoTH/">project</a>] [<a href="https://github.com/TIGER-AI-Lab/MAmmoTH">code</a>] [<a href="https://huggingface.co/datasets/TIGER-Lab/MathInstruct">data</a>]</span>
+            </li>
+            <li>
               <span class="paperTitle">AgentBench: Evaluating LLMs as Agents
               </span> <br />
               <span class="paperAuthor">Xiao Liu*, Hao Yu*, Hanchen Zhang, Yifan Xu, Xuanyu Lei, Hanyu Lai, Yu Gu, Hangliang Ding, Kaiwen Men, Kejuan Yang, Shudan Zhang, Xiang Deng, Aohan Zeng, Zhengxiao Du, Chenhui Zhang, Sheng Shen, Tianjun Zhang, Yu Su, Huan Sun, Minlie Huang, Yuxiao Dong, Jie Tang.</span>
