--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div class="divider"></div>
 
         <div class="publication">
-	      <div style="margin-bottom: 10px;font-size: 18px">(<a href="https://scholar.google.com/citations?user=rIh5OqoAAAAJ&hl=en">Google Scholar</a>)</div>	
+	      <div style="margin-bottom: 10px;font-size: 18px">(<a href="https://scholar.google.com/citations?user=rIh5OqoAAAAJ&hl=en">Google Scholar</a>) (<a href="https://yusu.substack.com/">Blog</a>)</div>	
 
           <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
           <ul>
@@ -223,18 +223,6 @@
               <span class="paperAuthor">Xiao Liu*, Hao Yu*, Hanchen Zhang, Yifan Xu, Xuanyu Lei, Hanyu Lai, Yu Gu, Hangliang Ding, Kaiwen Men, Kejuan Yang, Shudan Zhang, Xiang Deng, Aohan Zeng, Zhengxiao Du, Chenhui Zhang, Sheng Shen, Tianjun Zhang, Yu Su, Huan Sun, Minlie Huang, Yuxiao Dong, Jie Tang.</span>
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2308.03688">paper</a>] [<a href="https://github.com/THUDM/AgentBench">code</a>] (*: Equal Contribution) </span>
             </li>
-            <li>
-              <span class="paperTitle">MagicBrush: A Manually Annotated Dataset for Instruction-Guided Image Editing
-              </span> <br />
-              <span class="paperAuthor">Kai Zhang*, Lingbo Mo*, Wenhu Chen, Huan Sun, Yu Su.</span>
-              <span class="paperResource"> [<a href="https://arxiv.org/abs/2306.10012">paper</a>] [<a href="https://osu-nlp-group.github.io/MagicBrush/">project website</a>] (*: Equal Contribution)</span>
-              </li>
-            <li>
-              <span class="paperTitle">Mind2Web: Towards a Generalist Agent for the Web
-              </span> <br />
-              <span class="paperAuthor">Xiang Deng, Yu Gu, Boyuan Zheng, Shijie Chen, Samuel Stevens, Boshi Wang, Huan Sun, Yu Su.</span>
-              <span class="paperResource"> [<a href="https://arxiv.org/abs/2306.06070">paper</a>] [<a href="https://osu-nlp-group.github.io/Mind2Web/">project website</a>]</span>
-              </li>
             <li>
               <span class="paperTitle"><i>Adaptive Chameleon or Stubborn Sloth</i>: Unraveling the Behavior of Large Language Models in Knowledge Clashes
               </span> <br />
@@ -260,6 +248,24 @@
 
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
+                <li>
+                  <span class="paperTitle">Mind2Web: Towards a Generalist Agent for the Web
+                  </span> <br />
+                  <span class="paperAuthor">Xiang Deng, Yu Gu, Boyuan Zheng, Shijie Chen, Samuel Stevens, Boshi Wang, Huan Sun, Yu Su. In the Conference on Neural Information Processing Systems, 2023 (<b>NeurIPS'23 Spotlight</b>)</span>
+                  <span class="paperResource"> [<a href="https://arxiv.org/abs/2306.06070">paper</a>] [<a href="https://osu-nlp-group.github.io/Mind2Web/">project website</a>]</span>
+                </li>
+                <li>
+                  <span class="paperTitle">MagicBrush: A Manually Annotated Dataset for Instruction-Guided Image Editing
+                  </span> <br />
+                  <span class="paperAuthor">Kai Zhang*, Lingbo Mo*, Wenhu Chen, Huan Sun, Yu Su. In the Conference on Neural Information Processing Systems, 2023 (<b>NeurIPS'23</b>)</span>
+                  <span class="paperResource"> [<a href="https://arxiv.org/abs/2306.10012">paper</a>] [<a href="https://osu-nlp-group.github.io/MagicBrush/">project website</a>] (*: Equal Contribution)</span>
+                  </li>
+                <li>
+                  <span class="paperTitle">Holistic Transfer: Towards Non-Disruptive Fine-Tuning with Partial Target Data
+                  </span> <br />
+                  <span class="paperAuthor">Cheng-Hao Tu, Hong-You Chen, Jike Zhong, Zheda Mai, Vardaan Pahuja, Tanya Berger-Wolf, Song Gao, Charles Stewart, Yu Su, Wei-Lun Chao. In the Conference on Neural Information Processing Systems, 2023 (<b>NeurIPS'23</b>)</span>
+                  <span class="paperResource"> [<a href="*">paper</a>] </span>
+                </li>
                 <li>
                 <span class="paperTitle">LLM-Planner: Few-Shot Grounded Planning for Embodied Agents with Large Language Models</span> <br />
                 <span class="paperAuthor">Chan Hee Song, Jiaman Wu, Clayton Washington, Brian M. Sadler, Wei-Lun Chao, Yu Su. In the International Conference on Computer Vision, 2023 (<b>ICCV'23</b>) </span>
