--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <li><b>Check out <a href="https://twitter.com/osunlp/status/1609642737409855490">a summary of the major achievements</a> by the OSU NLP group in 2022!</b></li>
             <li>09/2023: 3 paper accepted to NeurIPS'23: <a href="https://arxiv.org/abs/2306.06070">Mind2Web</a> (spotlight), <a href="https://arxiv.org/abs/2306.10012">MagicBrush</a>, and Holistic Transfer.</li>
             <li>07/2023: Glad that <a href="https://dki-lab.github.io/LLM-Planner/">LLM-Planner</a> that uses LLMs for embodied agent planning got accepted to ICCV'23!</li>
-            <li>07/2023: Honored that our paper <a href="https://arxiv.org/abs/2212.09736">Pangu</a> received the Outstanding Paper Award from ACL 2023!</li>
+            <li>07/2023: Honored that our paper <a href="https://arxiv.org/abs/2212.09736">Pangu</a> received the <b>Outstanding Paper Award</b> from ACL 2023!</li>
             <li>06/2023: Invited talks at Army Research Lab and OSU RISK Institute.</li>
             <li>05/2023: 6 papers accepted to ACL'23. Congrats to all the students and collaborators!</li>
             <li>05/2023: Grateful to receive support from NIH R01 for our research on AI and biomedicine!</li>
